force-app/main/default/objects/GameCard__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The different actions that result from picking a Card.</description>
    <inlineHelpText>The different actions that result from picking a Card.</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get Out of Jail</fullName>
            </value>
            <value>
                <fullName>Money from Bank</fullName>
            </value>
            <value>
                <fullName>Money from Players</fullName>
            </value>
            <value>
                <fullName>Money to Bank</fullName>
            </value>
            <value>
                <fullName>Money to Players</fullName>
            </value>
            <value>
                <fullName>Move to Nearest Railroad</fullName>
            </value>
            <value>
                <fullName>Move to Nearest Utility</fullName>
            </value>
            <value>
                <fullName>Move to Property</fullName>
            </value>
            <value>
                <fullName>Move X Spaces</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>