force-app/main/default/objects/GameCard__c/fields/Card__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <label>Card</label>
    <referenceTo>Card__c</referenceTo>
    <relationshipLabel>Game Cards</relationshipLabel>
    <relationshipName>GameCards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>