force-app/main/default/objects/GameCard__c/fields/CardPropertyMetadataName__c.field-meta.xml
<CustomField>
    <fullName>CardPropertyMetadataName__c</fullName>
    <label>Card Property Metadata Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>