force-app/main/default/objects/GameCard__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Game Cards</relationshipLabel>
    <relationshipName>GameCards</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>