force-app/main/default/objects/GameCard__c/fields/GameProperty__c.field-meta.xml
<CustomField>
    <fullName>GameProperty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Property</label>
    <referenceTo>GameProperty__c</referenceTo>
    <relationshipLabel>Game Cards</relationshipLabel>
    <relationshipName>GameCards</relationshipName>
    <type>Lookup</type>
</CustomField>