force-app/main/default/objects/GameCard__c/fields/IsDiscarded__c.field-meta.xml
<CustomField>
    <fullName>IsDiscarded__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Discarded?</label>
    <type>Checkbox</type>
</CustomField>