force-app/main/default/objects/GameCard__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Player in possession of the Game Card. Only valid for Get Out of Jail Action Type.</description>
    <inlineHelpText>Player in possession of the Game Card. Only valid for Get Out of Jail Action Type.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Game Cards</relationshipLabel>
    <relationshipName>GameCards</relationshipName>
    <type>Lookup</type>
</CustomField>