force-app/main/default/objects/GameCard__c/fields/Spaces__c.field-meta.xml
<CustomField>
    <fullName>Spaces__c</fullName>
    <description>Number of spaces to move forward (positive) or back (negative) on the board.</description>
    <inlineHelpText>Number of spaces to move forward (positive) or back (negative) on the board.</inlineHelpText>
    <label>Spaces</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>